moved to script
moved to script

--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,9 @@
 .Rproj.user/F2D7E84/sources/prop/INDEX
 .Rproj.user/F2D7E84/sources/prop/16F87496
 *.png
+*.json
+.Rproj.user/F2D7E84/sources/s-615C97DD/CFAC1A53-contents
+.Rproj.user/F2D7E84/sources/s-615C97DD/CFAC1A53
+.Rproj.user/F2D7E84/sources/s-615C97DD/A8E6E30E-contents
+.Rproj.user/F2D7E84/sources/s-615C97DD/A8E6E30E
+.Rproj.user/F2D7E84/sources/prop/5ABA899D
