added  part 2 of the script (dependes on part 1 to work) and functions

--- a/.gitignore
+++ b/.gitignore
@@ -15,3 +15,31 @@
 .Rproj.user/F2D7E84/sources/s-615C97DD/A8E6E30E-contents
 .Rproj.user/F2D7E84/sources/s-615C97DD/A8E6E30E
 .Rproj.user/F2D7E84/sources/prop/5ABA899D
+*.pper
+.Rproj.user/F2D7E84/sources/s-615C97DD/FD646859-contents
+.Rproj.user/F2D7E84/sources/s-615C97DD/FD646859
+.Rproj.user/F2D7E84/sources/s-615C97DD/FD1A4E56-contents
+.Rproj.user/F2D7E84/sources/s-615C97DD/E85C0320-contents
+.Rproj.user/F2D7E84/sources/s-615C97DD/DE1B947B-contents
+.Rproj.user/F2D7E84/sources/s-615C97DD/D3895666-contents
+.Rproj.user/F2D7E84/sources/s-615C97DD/C12DF1D-contents
+.Rproj.user/F2D7E84/sources/s-615C97DD/B8EB0FED-contents
+.Rproj.user/F2D7E84/sources/s-615C97DD/A2B11F58-contents
+.Rproj.user/F2D7E84/sources/s-615C97DD/66B14395-contents
+.Rproj.user/F2D7E84/sources/s-615C97DD/5E449A67-contents
+.Rproj.user/F2D7E84/sources/s-615C97DD/5C510A25-contents
+.Rproj.user/F2D7E84/sources/s-615C97DD/4E033BE7-contents
+.Rproj.user/F2D7E84/sources/s-615C97DD/4DDB5D40-contents
+.Rproj.user/F2D7E84/sources/s-615C97DD/32BDAFCF-contents
+.Rproj.user/F2D7E84/sources/s-615C97DD/3048D398-contents
+.Rproj.user/F2D7E84/sources/s-615C97DD/2F6AAC5A-contents
+.Rproj.user/F2D7E84/sources/s-615C97DD/2F6AAC5A
+.Rproj.user/F2D7E84/sources/s-615C97DD/21546256-contents
+.Rproj.user/F2D7E84/sources/prop/CEB3E886
+.Rproj.user/F2D7E84/sources/prop/26F33300
+.Rproj.user/F2D7E84/saved_source_markers
+.Rproj.user/F2D7E84/rmd-outputs
+.Rproj.user/F2D7E84/persistent-state
+.Rproj.user/F2D7E84/sources/s-615C97DD/FD646859-contents
+.Rproj.user/F2D7E84/sources/s-615C97DD/FD646859
+.Rproj.user/F2D7E84/sources/prop/26F33300
